--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -170,7 +170,9 @@ if ($_product->type_id == 'configurable' && $_GET['styles']==22) {
                         <?php }else{ ?>
                            <a class="product_name" href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $this->__($_helper->productAttribute($_product, $_product->getName(), 'name')); ?></a>
                          <?php } ?>
-                            <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
+                            <span class="price"><?php 
+                            echo Mage::helper('core')->currency($_product->getFinalPrice(), true, false);
+                             ?></span>
                             <div class="btn-holder">
                                 <?php if ($this->helper('wishlist')->isAllow()) : ?>
                                     <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product) ?>" class="link-wishlist"><span class="span1"><span class="span2"><i class="icon-heart-empty"></i></span></span></a> 
