--- a/app/design/frontend/creo/default/template/manapro/filterradios/items.phtml
+++ b/app/design/frontend/creo/default/template/manapro/filterradios/items.phtml
@@ -26,7 +26,17 @@ if($labels == 'design_category'){
         echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
     }else{
     ?>
-    <span id="styles_label" class="search-by label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>"><?php echo $this->__('Search by Design'); ?></span>
+    <span id="styles_label" class="search-by label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
+<?php $SbD = $this->__('Search by Design'); ?>
+<?php $storeCode = Mage::app()->getStore()->getCode();
+if ($storeCode == "creo_ar"){
+echo $this->__('ابحث باستخدام التصميم');
+} else {
+echo $SbD;
+}
+?>
+
+    </span>
     <a id="label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>" class="opener attribure_labels" data-id="<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
 <?php $catName= $this->getFilterOptions()->name; ?>
 <?php foreach ($this->getItems() as $_item): ?>
