creo ar mobile fixes

--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
@@ -13,7 +13,7 @@
 
 
 
-
+<?php /* ?>
 <li <?php if (in_array("clothing",$parent_cat_array) || $_GET['id']==3) {
     echo'class="active"';
 } ?>> <a href="javascript:void(0)"><?php echo $this->__('CLOTHING'); ?></a>
@@ -65,9 +65,7 @@ endforeach;
     </div>
 </li>
 
-
-
-
+<?php */ ?>
 
 <?php
         $_helper = Mage::helper('catalog/category');
