megamenu featured static block

--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -223,24 +223,10 @@ endforeach;
 <span class="featured"><?php echo $this->__('Featured'); ?></span>
 </div>
 <ul class="featured-products">
-<!--    <li>
-<a href="#">
-  <img alt="" src="images/img18.jpg">
-  <span class="title">CLasSIC POLO</span>
-</a>
-</li>
-<li>
-<a href="#">
-  <img alt="" src="images/img19.jpg">
-  <span class="title">VINTAGE/COOL</span>
-</a>
-</li>
-<li>
-<a href="#">
-  <img alt="" src="images/img20.jpg">
-  <span class="title">TANK TOPS</span>
-</a>
-</li>-->
+<?php $clothingStatic = Mage::getModel('cms/block')->setStoreId(Mage::app()->getStore()->getId())->load('clothing-featured-static');
+if($clothingStatic){
+  echo $clothingStatic->getContent();
+  } ?>
 <?php
 $Featured_category = Mage::getModel('catalog/category')->load('57')->getChildrenCategories();
 foreach ($Featured_category as $category):
