megamenu featured static block

--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -223,9 +223,9 @@ endforeach;
 <span class="featured"><?php echo $this->__('Featured'); ?></span>
 </div>
 <ul class="featured-products">
-<?php $clothingStatic = Mage::getModel('cms/block')->setStoreId(Mage::app()->getStore()->getId())->load('clothing-featured-static');
+<?php $clothingStatic = $this->getLayout()->createBlock('cms/block')->setBlockId('clothing-featured-static')->toHtml();
 if($clothingStatic){
-  echo $clothingStatic->getContent();
+  echo $clothingStatic;
   } ?>
 <?php
 $Featured_category = Mage::getModel('catalog/category')->load('57')->getChildrenCategories();
@@ -313,6 +313,10 @@ endforeach;
 <span class="featured"><?php echo $this->__('Featured'); ?></span>
 </div>
 <ul class="featured-products">
+<?php $capsStatic = $this->getLayout()->createBlock('cms/block')->setBlockId('caps-featured-static')->toHtml();
+if($capsStatic){
+  echo $capsStatic;
+  } ?>
 <?php
 $Featured_category = Mage::getModel('catalog/category')->load('54')->getChildrenCategories();
 foreach ($Featured_category as $category):
