--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -284,6 +284,10 @@ endforeach;
 <span class="featured"><?php echo $this->__('Featured'); ?></span>
 </div>
 <ul class="featured-products">
+<?php $clothingStatic = $this->getLayout()->createBlock('cms/block')->setBlockId('clothing-featured-static')->toHtml();
+if($clothingStatic){
+  echo $clothingStatic;
+  } ?>
 <?php
 $Featured_category = Mage::getModel('catalog/category')->load('5')->getChildrenCategories();
 foreach ($Featured_category as $category):
@@ -327,6 +331,10 @@ endforeach;
 <span class="featured"><?php echo $this->__('Featured'); ?></span>
 </div>
 <ul class="featured-products">
+<?php $capsStatic = $this->getLayout()->createBlock('cms/block')->setBlockId('caps-featured-static')->toHtml();
+if($capsStatic){
+  echo $capsStatic;
+  } ?>
 <?php
 $Featured_category = Mage::getModel('catalog/category')->load('54')->getChildrenCategories();
 foreach ($Featured_category as $category):
