--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -277,6 +277,7 @@ text-transform: uppercase;
 .product-detail .btn-holder .span2:before {
 content: '\e80d';
 font-family: fontello;
+padding:0 5px;
 }
 /*cart button ends*/
 /*cart button stars on fancy box*/
