--- a/skin/frontend/creo_mobile/default/style-ar.css
+++ b/skin/frontend/creo_mobile/default/style-ar.css
@@ -36,8 +36,11 @@ footer#footer{direction:rtl;}
 .tshirtsize .heading{padding:8px 12px;}
 .cate-open-close{height:auto !important;}
 
-.cartPage_custome_responsive .item-options dd,.jconfirm .jconfirm-box div.title,.jconfirm .jconfirm-box div.content,input,select,
-textarea,input[type="text"], input[type="password"], input.email{text-align:right;}
+.cartPage_custome_responsive .item-options dd,#nav .links-area .links,.faq-area .faq-frame.terms .openeer-holder .question,
+.shipping-methods h3, #last_most_view_title > h3,.faq-area h3,.tab-content2 .dark-heading,.three-column h3,
+#savePopup .form-horizontal .form-group p,.modal-holder .login-form label,.attributeItem,.jconfirm .jconfirm-box div.title,
+.jconfirm .jconfirm-box div.content,input,select,textarea,input[type="text"], input[type="password"], input.email,.cart-table-area dl dt,
+.cart-table-area dl dd,#product-options-wrapper,.cs-form textarea{text-align:right;}
 
 .cartPage_custome_responsive .item-options dt{text-align:left;padding-left:5px;}
 .cartPage_custome_responsive td{text-align:left;}
@@ -53,13 +56,13 @@ textarea,input[type="text"], input[type="password"], input.email{text-align:righ
 .cart-table-area dl dt, .cart-table-area dl dd{text-align:center;}
 .catalog-product-view .text-area .qty-area label{display:block;}
 .form-holder .form-frame{margin:0;}
-
-/*#footer .column.column1{width:auto;}
-.products-grid .btn-holder a:first-child .span1{margin-left:0;margin-right:-10px;}
 .category--heading span:before,.shipping-methods h3 span:before, #last_most_view_title > h3 span:before,.faq-area h3 span:before,
 .tab-content2 .dark-heading span:before,.three-column h3 span:before{border-color: transparent #000 transparent #000;
 border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 .faq-area h3 span:before{border-width: 22px 6px 0 0px;}
+
+/*#footer .column.column1{width:auto;}
+.products-grid .btn-holder a:first-child .span1{margin-left:0;margin-right:-10px;}
 .tab-content2 .dark-heading span:before,.three-column h3 span:before{border-width:20px 6px 0 0px;}
 .toolbar .sort-by select, .category_top_filters .sort-by select{font-size:12px;}
 #nav .links-area .links,.faq-area .faq-frame.terms .openeer-holder .question,
@@ -79,11 +82,12 @@ white-space:nowrap;}
 .pdc-design-view .edit-tools{left:0;}
 .layer-final label{float:right !important;white-space:nowrap;}
 #product-options-wrapper{width:84%;}
-.icon-angle-left:before{content: '\e810';}
-.icon-angle-right:before{content: '\e80f';}
+
 .design_categories_attributes ul li{margin:0 0% 1% 1%;}
 .design_categories_attributes ul li:nth-child(4n){margin-left:0;}
 */
+.icon-angle-left:before{content: '\e810';}
+.icon-angle-right:before{content: '\e80f';}
 .cart-btn-area .btn-holder .button2 .span2, .cart-btn-area .btn-holder .button2:first-child .span2{padding-left:25px;}
 .cart-bottom-area .btn-holder a:first-child .span1,.cart-bottom-area .btn-holder a:first-child .span2{-webkit-transform: skewX(0deg);
 -moz-transform: skewX(0deg);-ms-transform: skewX(0deg);-o-transform: skewX(0deg);transform: skewX(0deg);}
