--- a/skin/frontend/creo_mobile/default/style-ar.css
+++ b/skin/frontend/creo_mobile/default/style-ar.css
@@ -40,7 +40,7 @@ footer#footer{direction:rtl;}
 .shipping-methods h3, #last_most_view_title > h3,.faq-area h3,.tab-content2 .dark-heading,.three-column h3,
 #savePopup .form-horizontal .form-group p,.modal-holder .login-form label,.attributeItem,.jconfirm .jconfirm-box div.title,
 .jconfirm .jconfirm-box div.content,input,select,textarea,input[type="text"], input[type="password"], input.email,.cart-table-area dl dt,
-.cart-table-area dl dd,#product-options-wrapper,.cs-form textarea{text-align:right;}
+.cart-table-area dl dd,#product-options-wrapper,.cs-form textarea,.bulk-order-form textarea{text-align:right;}
 
 .cartPage_custome_responsive .item-options dt{text-align:left;padding-left:5px;}
 .cartPage_custome_responsive td{text-align:left;}
@@ -60,7 +60,9 @@ footer#footer{direction:rtl;}
 .tab-content2 .dark-heading span:before,.three-column h3 span:before{border-color: transparent #000 transparent #000;
 border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 .faq-area h3 span:before{border-width: 22px 6px 0 0px;}
-
+.faq-area .faq-frame .open-close2{margin:0 0 18px 2%;}
+.three-column h3 span:before{border-width:20px 6px 0 0px;}
+.faq-area .openeer-holder .question span{padding:0 10px;}
 /*#footer .column.column1{width:auto;}
 .products-grid .btn-holder a:first-child .span1{margin-left:0;margin-right:-10px;}
 .tab-content2 .dark-heading span:before,.three-column h3 span:before{border-width:20px 6px 0 0px;}
@@ -70,9 +72,8 @@ border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 #savePopup .form-horizontal .form-group p,.modal-holder .login-form label{text-align:right;}
 .order-details-table th:first-child{text-align:center;}
 .catalog-product-view .text-area .qty-area label{display:block;}
-
 .faq-area.return-area .step-col li,.form-holder .form-frame{margin: 0 0% 0 2%;}
-.faq-area .faq-frame .open-close2{margin:0 0 18px 2%;}
+
 .faq-area .openeer-holder .question span{padding:0 7px;}
 .signup-form .row .col:first-child {margin: 0px 0% 0 2%;}
 .product-area .cancel,.product-area .edit{right:inherit;left:10%;}
