--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -957,7 +957,10 @@ textarea { background: #fff; border: 1px solid #ddd; display: block; height: 99p
 .input-box select::-ms-expand, .bulk-order-form select::-ms-expand {
 display: none;
 }
-.input-box select, .bulk-order-form select { display: inline-block; border: 1px solid #e4e4e4; padding: 2px 3px 2px 5px; margin: 0; font: inherit; outline: none; background: #fff; -webkit-appearance: none; -webkit-border-radius: 6px; -moz-border-radius: 6px; appearance: none; width: 97%; position: relative; left: 0 !important; bottom: 0 !important; height: 20px !important; font-size: 12px; line-height: 12px; text-transform: uppercase; color: #949494; border-radius: 0; }
+.input-box select, .bulk-order-form select{display: inline-block; border: 1px solid #e4e4e4; padding: 2px 3px 2px 5px; margin: 0;
+font: inherit; outline: none; background: #fff; -webkit-appearance: none; -webkit-border-radius: 6px; -moz-border-radius: 6px;
+appearance: none;width: 97%; position: relative; left: 0 !important;bottom:0 !important; height: 20px !important; font-size: 12px;
+line-height:15px; text-transform: uppercase; color: #949494; border-radius:0;}
 .input-box select { bottom: 2px !important; }
 .bulk-order-form .form-select-col input[type="text"] { border: 1px solid #e4e4e4; padding: 2px 3px 2px 5px; /*width: 176px; height: 18px !important; */color: #949494; font-size: 10px; line-height: 12px; border-radius: 0; background: #fff; }
 .option-container .input-box .fake-select:before, .bulk-order-form .fake-select:before { content: ""; position: absolute; top: 0; right: 0; bottom: 0; background: url(images/bg-select.jpg) no-repeat; background-size: 100% 100%; height: 18px; width: 22px; pointer-events: none; z-index: 1; }
