--- a/app/design/frontend/creo_mobile/default/template/page/html/track_shipment.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/track_shipment.phtml
@@ -17,7 +17,7 @@
           </span></div>
         <div class="form-select-col second-child">
           <label for="city">*<?php echo $this->__('Tracking number'); ?></label>
-          <input id="tracking_number" class="required-entry" type="text" placeholder="Please enter tracking number" name="tracking_number" />
+          <input id="tracking_number" class="required-entry" type="text" placeholder="<?php echo $this->__('Please enter tracking number'); ?>" name="tracking_number" />
         </div>
         <div class="form-select-col third-child">
           <input type="button" value="<?php echo $this->__('SUBMIT'); ?>" onclick="return loadIframe('ifrm');" />
