--- a/skin/frontend/creo_mobile/default/style-ar.css
+++ b/skin/frontend/creo_mobile/default/style-ar.css
@@ -30,7 +30,7 @@ footer#footer{direction:rtl;}
 .catalog-product-view .text-area .qty-area,.form-holder .checkbox-holder input[type="checkbox"],
 .form-holder .checkbox-holder label{float:right;}
 .form-holder .checkbox-holder input[type="checkbox"]{margin-left:5px;}
-
+select{padding-right: 25px;}
 .product-detail .price-area{padding:10px 0;}
 #last_most_view_box_sub,.tshirtsize,.form-holder .btn-holder button:first-child,.tab-links{direction:ltr;}
 .tshirtsize .heading{padding:8px 12px;}
@@ -54,7 +54,7 @@ footer#footer{direction:rtl;}
 .checkout-form .inner-form select, .checkout-form .form-group select,.selectPhotoCategory,select{padding-right:30px;}
 .checkout-form .form-group input{padding-right:10px;}
 .cart-table-area dl dt, .cart-table-area dl dd{text-align:center;}
-.catalog-product-view .text-area .qty-area label{display:block;}
+.catalog-product-view .text-area .qty-area label,.cs-form .ps{display:block;}
 .form-holder .form-frame{margin:0;}
 .category--heading span:before,.shipping-methods h3 span:before, #last_most_view_title > h3 span:before,.faq-area h3 span:before,
 .tab-content2 .dark-heading span:before,.three-column h3 span:before{border-color: transparent #000 transparent #000;
