--- a/app/design/frontend/creo_mobile/default/template/checkout/cart/minicart/default.phtml
+++ b/app/design/frontend/creo_mobile/default/template/checkout/cart/minicart/default.phtml
@@ -291,9 +291,9 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
 
             <?php if (!$this->isOnCheckoutPage()): ?>
                 <?php if ((strpos(Mage::helper('core/url')->getCurrentUrl(), '/checkout/cart/') == true || strpos(Mage::helper('core/url')->getCurrentUrl(), '/onestepcheckout/') == true) && strpos(Mage::helper('core/url')->getCurrentUrl(), '/checkout/cart/ajaxDelete/') == false && strpos(Mage::helper('core/url')->getCurrentUrl(), '/checkout/cart/add/') == false){
-					?><!--<a href="javascript:;" title="<?php echo $this->__('Remove This Item') ?>" class="cancel"> <?php echo $this->__('') ?> 
+					?><a href="javascript:;" title="<?php echo $this->__('Remove This Item') ?>" class="cancel"> <?php echo $this->__('') ?> 
                     <i class="icon-cancel"></i>
-                </a>--><?php
+                </a><?php
 				}else{?>
                 <a href="<?php echo str_replace('http:','',$this->getAjaxDeleteUrl()); ?>" title="<?php echo $this->__('Remove This Item') ?>"
                    data-confirm="<?php echo $this->__('Are you sure you would like to remove this item from the shopping cart?') ?>"
