--- a/skin/frontend/creo_mobile/default/style-ar.css
+++ b/skin/frontend/creo_mobile/default/style-ar.css
@@ -45,8 +45,8 @@ select{padding-right: 25px;}
 .onestepcheckout-index-index .discount-form .leftSide label{text-align:right;}
 
 .cartPage_custome_responsive .item-options dt{text-align:left;padding-left:5px;}
-.cartPage_custome_responsive td{text-align:left;padding-left:10%;}
-.cartPage_custome_responsive td:before{left:inherit;right:0;text-align:left;}
+.cartPage_custome_responsive td{text-align:left;padding-left:30%;}
+.cartPage_custome_responsive td:before{left:inherit;right:0;text-align:right;}
 
 .cartPage_custome_responsive td:nth-of-type(1):before { content: "";  }
 .cartPage_custome_responsive td:nth-of-type(2):before { content: "توحيد السعر";}
