--- a/app/design/frontend/creo/default/template/checkout/cart/minicart/items.phtml
+++ b/app/design/frontend/creo/default/template/checkout/cart/minicart/items.phtml
@@ -31,6 +31,43 @@
  */
 ?>
 <?php
+/*
+/////////////////////
+This function has been created by Abdulfattah alhazmi
+Roles:
+To convert Arabic/Farsi Numbers (٠‎ - ١‎ - ٢‎ - ٣‎ - ٤‎ - ٥‎ - ٦‎ - ٧‎ - ٨‎ - ٩‎) 
+TO the corrosponding English numbers (0-1-2-3-4-5-6-7-8-9)
+http://hazmi.co.cc
+/////////////////////
+*/
+function convertArabicNumbersMinicart($arabic) {
+    $trans = array(
+      "0" => "&#1632;",
+      "1" =>"&#1633;",
+      "2" => "&#1634;",
+       "3" => "&#1635;",
+       "4" => "&#1636;",
+       "5" => "&#1637;",
+       "6" => "&#1638;",
+       "7" => "&#1639;",
+       "8" => "&#1640;",
+       "9" => "&#1641;",
+
+      // "0" => "0",
+      // "1" =>"1",
+      // "2" => "2",
+      //  "3" => "3",
+      //  "4" => "4",
+      //  "5" => "5",
+      //  "6" => "6",
+      //  "7" => "7",
+      //  "8" => "8",
+      //  "9" => "9",
+    );
+    return strtr($arabic,$trans);
+}
+?>
+<?php
 $_cartQty = $this->getSummaryCount();
 if(empty($_cartQty)) {
     $_cartQty = 0;
@@ -75,7 +112,7 @@ $theDigit = Mage::helper('checkout')->formatPrice($this->getSubtotal());
 $storeCode = Mage::app()->getStore()->getCode();
 if ($storeCode == "creo_ar"){
 $convertedDigit = strip_tags(htmlspecialchars_decode($theDigit));
-$convertedDigit = convertArabicNumbers($convertedDigit);
+$convertedDigit = convertArabicNumbersMinicart($convertedDigit);
 echo $convertedDigit;
 } else {
 echo $theDigit;
